--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/charlieBot?serverTimezone=UTC}
-#spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://aa1ab7ya7lu6swz.cchdykdco85u.us-east-2.rds.amazonaws.com:3306/ebdb?serverTimezone=UTC}
+#spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/charlieBot?serverTimezone=UTC}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://aa1ab7ya7lu6swz.cchdykdco85u.us-east-2.rds.amazonaws.com:3306/ebdb?serverTimezone=UTC}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 
@@ -19,8 +19,9 @@ cloud.aws.credentials.bucketName=charliebot
 
 telegrambot.userName=@charliewoof_bot
 telegrambot.botToken=1353286018:AAFI6X0LaqDuWUxAHHs2jX6RytUYqGzC2do
+#charlie token
 #telegrambot.botToken=1385530712:AAEoHrYRzn52DlfS1zp47mZFRlYCNte-wKU
-telegrambot.webHookPath=https://a1a3663db997.ngrok.io 
+telegrambot.webHookPath=https://3a23bb234756.ngrok.io 
 
 server.port=5000
 localeTag=ru-RU
