--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,9 @@ cloud.aws.credentials.bucketName=charliebot
 
 
 telegrambot.userName=@charliewoof_bot
-telegrambot.botToken=1353286018:AAFI6X0LaqDuWUxAHHs2jX6RytUYqGzC2do
+#telegrambot.botToken=1353286018:AAFI6X0LaqDuWUxAHHs2jX6RytUYqGzC2do
 #charlie token
-#telegrambot.botToken=1385530712:AAEoHrYRzn52DlfS1zp47mZFRlYCNte-wKU
-telegrambot.webHookPath=https://3a23bb234756.ngrok.io 
-
-server.port=5000
+telegrambot.botToken=1385530712:AAEoHrYRzn52DlfS1zp47mZFRlYCNte-wKU
+telegrambot.webHookPath=https://charliewoofbot.herokuapp.com/
+#server.port=5000
 localeTag=ru-RU
