--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.charlieWoof</groupId>
 	<artifactId>charlieBot</artifactId>
 	<version>1.0</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>charlieBot</name>
 	<description>charlieBot</description>
 
